--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,22 @@
 
     <build>
         <plugins>
+	    <plugin>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<version>2.5.4</version>
+		<configuration>
+		    <descriptors>
+		        <descriptor>src/main/install/assembly.xml</descriptor>
+		    </descriptors>
+		</configuration>
+		<executions>
+		    <execution>
+			<id>make-assembly</id>
+			<phase>package</phase>
+			<goals><goal>single</goal></goals>
+		    </execution>
+		</executions>
+	    </plugin>
             <plugin>
 	        <groupId>org.flywaydb</groupId>
 		<artifactId>flyway-maven-plugin</artifactId>
