--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,15 @@
             <version>1.7.12</version>
         </dependency>
         <dependency>
+	    <!-- Requires you to install manually the artifact:
+                mvn install:install-file -Dfile=lib/AppleJavaExtensions-1.6.jar -DgroupId=com.apple -DartifactId=AppleJavaExtensions -Dversion=1.6 -Dpackaging=jar
+            -->
+            <groupId>com.apple</groupId>
+            <artifactId>AppleJavaExtensions</artifactId>
+            <version>1.6</version>
+	    <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.9</version>
